Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL)
-
None
Description
Creating a temporary table with Spider is non-sense because a Spider table cannot hold any physical data and it requires an additional effort to manage it. Add HTON_TEMPORARY_NOT_SUPPORTED to spider_hton->flags in order to prevent this.
Attachments
Issue Links
- relates to
-
MDEV-28219 Spider: Could not remove temporary table on DROP when mysql.spider_tables is missing
-
- Closed
-